[gd_scene load_steps=3 format=3 uid="uid://d2yj6tlcyqju2"]

[ext_resource type="Script" path="res://scenes/main/index.gd" id="1_bu8xs"]
[ext_resource type="Theme" uid="uid://dlvtsfrms6587" path="res://resources/default_theme.tres" id="2_q71yn"]

[node name="Index" type="Node2D"]
script = ExtResource("1_bu8xs")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
theme = ExtResource("2_q71yn")
color = Color(0, 0.552941, 0.552941, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="GameTitle" type="Label" parent="ColorRect/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_q71yn")
theme_override_colors/font_color = Color(0.780392, 0.74902, 0.752941, 1)
theme_override_font_sizes/font_size = 120
text = "Billiard"

[node name="PlayBtn" type="Button" parent="ColorRect/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Play!"

[node name="LevelBtn" type="Button" parent="ColorRect/MarginContainer/CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Levels"

[node name="ExitBtn" type="Button" parent="ColorRect/MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Exit"

[connection signal="pressed" from="ColorRect/MarginContainer/CenterContainer/VBoxContainer/PlayBtn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/CenterContainer/VBoxContainer/LevelBtn" to="." method="_on_level_btn_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/CenterContainer/VBoxContainer/ExitBtn" to="." method="_on_exit_btn_pressed"]
